Jonas Nachhilfe progress.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="de">
-    <head>
-        <meta charset="UTF-8">
-        <title>
-            Beat me
-        </title>
-    </head>
-    <body>
-        <canvas id="myCanvas" width="899" height="899" style="border:1px groove #B55E24;">
-        </canvas> 
-        <h2><p id="computer_p">Computer</p></h2>
-        <script src="./script.js"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Beat me</title>
+  </head>
+  <body>
+    <canvas
+      id="myCanvas"
+      width="899"
+      height="899"
+      style="border: 1px groove #b55e24"
+    >
+    </canvas>
+    <h2><p id="hint_paragraph">Computer</p></h2>
+    <script src="./script.js"></script>
+  </body>
 </html>
