Set canvas width according to user screen size instead of hard coding it. Add new o.svg and x.svg vector graphics instead of images. Add drawCell function to draw evenly sized cells. Add drawImage function with imageScale parameter.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
     <title>Beat me</title>
   </head>
   <body>
-    <canvas
-      id="myCanvas"
-      width="899"
-      height="899"
-      style="border: 1px groove #b55e24"
-    >
-    </canvas>
+    <canvas id="myCanvas" style="border: 1px groove #b55e24"> </canvas>
     <h2><p id="hint_paragraph">Computer</p></h2>
     <script src="./script.js"></script>
   </body>
